# ObjectTrackingTestBench

./: .gitignore  Associator.cpp  AssociatorDataCSVPlotter.m  AssociatorFile.csv  Associator_test.cpp  CMakeCache.txt  CMakeLists.txt  CommonFunctions.cpp  CommonFunctions_test.cpp  DummyKF.cpp  KFHandler.cpp  KFHandlerData.csv  KFHandlerDataCSVPlotter.m  KFHandler_test.cpp  Makefile  ObsGenerator.cpp  ObsGenerator_test.cpp  Obstacle.cpp  ObstacleCSVPlotter.m  ObstacleData.csv  ObstacleType.hpp  Obstacle_test.cpp  README.md  Sensor.cpp  Sensor.hpp  SensorObstacleParamCSVPlotter.m  SensorObstacleParamData.csv  SensorObstaclePointCSVPlotter.m  SensorObstaclePointData.csv  SensorObstaclePointErrorPlotter.m  SensorType.cpp  SensorType.hpp  Sensor_test.cpp  Verify_AccVsVel.m  VerletIntegration.cpp  VerletIntegration_test.cpp  a.out  cmake_install.cmake  executeObsGenTests  executeTests  (+7 more)
CSV Files/: AssociatorFile.csv  KFHandlerData.csv  ObstacleCSVPlotter.m  ObstacleData.csv  SensorObstacleParamData.csv  SensorObstaclePointData.csv
MATLAB Code/: CheckCovarianceTransformation.m  SensorObstaclePointCSVPlotter.m  Testing_covariance_transform.m
cpp code/: Associator.cpp  Associator_test.cpp  DummyKF.cpp  ObsGenerator.cpp  Obstacle.cpp  Sensor_test.cpp  VerletIntegration_test.cpp  main.cpp
